--- a/index.html
+++ b/index.html
@@ -33,6 +33,29 @@
         </li>
       </ul>
     </p>
+    <h2>My User Story</h2>
+    <p>
+      <ul>
+        <li>I would like to be able to say that I am a software developer, and be good at it!
+        </li>
+        <li>I want to know how to write code in:
+        </li>
+          <ul class="code">
+            <li>HTML5/CSS3</li>
+            <li>javascript</li>
+            <li>jQuery</li>
+            <li>Python</li>
+            <li>PHP</li>
+            <li>Node.js</li>
+            <li>Java</li>
+            <li>Swift</li>
+          </ul>
+        <li>As a developer, I want to make useful web and mobile apps.
+        </li>
+        <li>I want to make enough money to move into a nicer apartment.
+        </li>
+      </ul>
+    </p>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
