--- a/index.html
+++ b/index.html
@@ -6,56 +6,65 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>About Ariel</h1>
-    <h2>Technical Requirements for "About Me"</h2>
-    <p>
-      A new GitHub repo called about_me will be initialized for this assignment (with a README and a license, of course)
-      <ul>
-        <li>Clone this repo to the root level of your ~/codefellows/201/ directory on your computer.
-        </li>
-        <li>Add an index.html file, a style.css file, and an app.js file to your repo, and get the files "wired up together" so to speak.
-        </li>
-        <li>HTML, CSS, and JavaScript must be cleanly written with correct indentation and syntax. Look at examples online and in your textbook. Note that your JS must pass the rules in the linter that we installed.
-        </li>
-        <li>Do not write functions in your JavaScript. We will get to functions on Day 4.
-        </li>
-        <li>Your JS file contains a 'use strict' declaration at the top. Always.
-        </li>
-        <li>Design a guessing game about you that involves FIVE yes/no questions. Be creative and fun and whimsical. Or not. It's up to you! It's your project!
-        </li>
-        <li>The questions in the guessing game must require a mix of yes/no answers, and user input must accept either y/n or yes/no responses, with either .toUpperCase() or .toLowerCase() used to validate the user input and accommodate users entering all-caps Y/N or YES/NO answers, too.
-        </li>
-        <li>Useful and descriptive console.log() messages in the JS are well written and correctly displaying to the browser console for each question of the guessing game.
-        </li>
-        <li>Use CSS to style your page as you see fit, to the level of abilities in CSS that you currently have
-        </li>
-        <li>Add, Commit, Push process is being followed; it is evident in GitHub that commits are made regularly, and with good commit messages that explain the WHY of the commit.
-        </li>
-      </ul>
-    </p>
-    <h2>My User Story</h2>
-    <p>
-      <ul>
-        <li>I would like to be able to say that I am a software developer, and be good at it!
-        </li>
-        <li>I want to know how to write code in:
-        </li>
-          <ul class="code">
-            <li>HTML5/CSS3</li>
-            <li>javascript</li>
-            <li>jQuery</li>
-            <li>Python</li>
-            <li>PHP</li>
-            <li>Node.js</li>
-            <li>Java</li>
-            <li>Swift</li>
-          </ul>
-        <li>As a developer, I want to make useful web and mobile apps.
-        </li>
-        <li>I want to make enough money to move into a nicer apartment.
-        </li>
-      </ul>
-    </p>
+    <header>
+      <h1>About Ariel</h1>
+    </header>
+    <div id="section1">
+      <h2>Technical Requirements for "About Me"</h2>
+      <p>
+        A new GitHub repo called about_me will be initialized for this assignment (with a README and a license, of course)
+        <ul>
+          <li>Clone this repo to the root level of your ~/codefellows/201/ directory on your computer.
+          </li>
+          <li>Add an index.html file, a style.css file, and an app.js file to your repo, and get the files "wired up together" so to speak.
+          </li>
+          <li>HTML, CSS, and JavaScript must be cleanly written with correct indentation and syntax. Look at examples online and in your textbook. Note that your JS must pass the rules in the linter that we installed.
+          </li>
+          <li>Do not write functions in your JavaScript. We will get to functions on Day 4.
+          </li>
+          <li>Your JS file contains a 'use strict' declaration at the top. Always.
+          </li>
+          <li>Design a guessing game about you that involves FIVE yes/no questions. Be creative and fun and whimsical. Or not. It's up to you! It's your project!
+          </li>
+          <li>The questions in the guessing game must require a mix of yes/no answers, and user input must accept either y/n or yes/no responses, with either .toUpperCase() or .toLowerCase() used to validate the user input and accommodate users entering all-caps Y/N or YES/NO answers, too.
+          </li>
+          <li>Useful and descriptive console.log() messages in the JS are well written and correctly displaying to the browser console for each question of the guessing game.
+          </li>
+          <li>Use CSS to style your page as you see fit, to the level of abilities in CSS that you currently have
+          </li>
+          <li>Add, Commit, Push process is being followed; it is evident in GitHub that commits are made regularly, and with good commit messages that explain the WHY of the commit.
+          </li>
+        </ul>
+      </p>
+    </div><!-- end section1 -->
+    <div id="section2">
+      <h2>My User Story</h2>
+      <p>
+        <ul>
+          <li>I would like to be able to say that I am a software developer, and be good at it!
+          </li>
+          <li>I want to know how to write code in:
+          </li>
+            <ul class="code">
+              <li>HTML5/CSS3</li>
+              <li>javascript</li>
+              <li>jQuery</li>
+              <li>Python</li>
+              <li>PHP</li>
+              <li>Node.js</li>
+              <li>Java</li>
+              <li>Swift</li>
+            </ul>
+          <li>As a developer, I want to make useful web and mobile apps.
+          </li>
+          <li>I want to make enough money to move into a nicer apartment.
+          </li>
+        </ul>
+      </p>
+    </div><!-- end section2 -->
     <script type="text/javascript" src="app.js"></script>
   </body>
+  <footer>
+    <p>&copy; 2017 Ariel Pedraza</p>
+  </footer>
 </html>
