--- a/index.html
+++ b/index.html
@@ -5,64 +5,151 @@
     <title>About Me</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
     <header>
       <h1>About Ariel</h1>
     </header>
-    <div id="section1">
-      <h2>Technical Requirements for "About Me"</h2>
-      <p>
-        A new GitHub repo called about_me will be initialized for this assignment (with a README and a license, of course)
-        <ul>
-          <li>Clone this repo to the root level of your ~/codefellows/201/ directory on your computer.
-          </li>
-          <li>Add an index.html file, a style.css file, and an app.js file to your repo, and get the files "wired up together" so to speak.
-          </li>
-          <li>HTML, CSS, and JavaScript must be cleanly written with correct indentation and syntax. Look at examples online and in your textbook. Note that your JS must pass the rules in the linter that we installed.
-          </li>
-          <li>Do not write functions in your JavaScript. We will get to functions on Day 4.
-          </li>
-          <li>Your JS file contains a 'use strict' declaration at the top. Always.
-          </li>
-          <li>Design a guessing game about you that involves FIVE yes/no questions. Be creative and fun and whimsical. Or not. It's up to you! It's your project!
-          </li>
-          <li>The questions in the guessing game must require a mix of yes/no answers, and user input must accept either y/n or yes/no responses, with either .toUpperCase() or .toLowerCase() used to validate the user input and accommodate users entering all-caps Y/N or YES/NO answers, too.
-          </li>
-          <li>Useful and descriptive console.log() messages in the JS are well written and correctly displaying to the browser console for each question of the guessing game.
-          </li>
-          <li>Use CSS to style your page as you see fit, to the level of abilities in CSS that you currently have
-          </li>
-          <li>Add, Commit, Push process is being followed; it is evident in GitHub that commits are made regularly, and with good commit messages that explain the WHY of the commit.
-          </li>
-        </ul>
-      </p>
-    </div><!-- end section1 -->
-    <div id="section2">
-      <h2>My User Story</h2>
-      <p>
-        <ul>
-          <li>I would like to be able to say that I am a software developer, and be good at it!
-          </li>
-          <li>I want to know how to write code in:
-          </li>
-            <ul class="code">
-              <li>HTML5/CSS3</li>
-              <li>javascript</li>
-              <li>jQuery</li>
-              <li>Python</li>
-              <li>PHP</li>
-              <li>Node.js</li>
-              <li>Java</li>
-              <li>Swift</li>
+    
+    <div id="content">
+      <section>
+        <article>
+          <h2>Technical Requirements for "About Me"</h2>
+          <p>A new GitHub repo called about_me will be initialized for this assignment (with a README and a license, of course)</p>
+          <ul>
+            <li>Clone this repo to the root level of your ~/codefellows/201/ directory on your computer.</li>
+            <li>Add an index.html file, a style.css file, and an app.js file to your repo, and get the files "wired up together" so to speak.</li>
+            <li>HTML, CSS, and JavaScript must be cleanly written with correct indentation and syntax. Look at examples online and in your textbook. Note that your JS must pass the rules in the linter that we installed.</li>
+            <li>Do not write functions in your JavaScript. We will get to functions on Day 4.</li>
+            <li>Your JS file contains a 'use strict' declaration at the top. Always.</li>
+            <li>Design a guessing game about you that involves FIVE yes/no questions. Be creative and fun and whimsical. Or not. It's up to you! It's your project!</li>
+            <li>The questions in the guessing game must require a mix of yes/no answers, and user input must accept either y/n or yes/no responses, with either .toUpperCase() or .toLowerCase() used to validate the user input and accommodate users entering all-caps Y/N or YES/NO answers, too.</li>
+            <li>Useful and descriptive console.log() messages in the JS are well written and correctly displaying to the browser console for each question of the guessing game.</li>
+            <li>Use CSS to style your page as you see fit, to the level of abilities in CSS that you currently have</li>
+            <li>Add, Commit, Push process is being followed; it is evident in GitHub that commits are made regularly, and with good commit messages that explain the WHY of the commit.</li>
+          </ul>
+        </article>
+        <article>
+        <h2>Technical Requirements Additions</h2>
+          <ul>
+            <li>Per the user stories, you will need to include in your HTML at least one each of an ordered and an unordered list.</li>
+            <li>Use prompt for input and alert for output to the user.</li>
+            <li>Do not use any 'switch' statements in your JavaScript.</li>
+            <li>Do not write any functions in your JavaScript.</li>
+            <li>Expect that you will probably need both 'for' and 'while' structures for your sixth and seventh questions. But not necessarily. Maybe. Possibly.</li>
+          </ul>
+        </article>
+      </section>
+
+      <section>
+        <h2>My User Story</h2>
+        <article>
+          <h3>Story Entry #1</h3>
+            <ul>
+              <li>As a student, I want to create an About Me page as a demonstration of my skills with HTML.</li>
+              <li>As an eventual jobseeker, I want to get practice in creating a portfolio page so that I can make myself appealing to potential employers.</li>
+              <li>As an eventual jobseeker, I would like for potential employers to quickly learn a few things about me, such as a short bio, my education, an overview of my job experience, and my goals.</li>
+              <li>As a fun-loving human being, I want to give the visitors to my About Me page a guessing game that shows how fun-loving and interesting I am, and maybe include things about myself that would not ordinarily appear in a portfolio page.</li>
+              <li>As a developer, I want to use semantic markup to structure my index.html page, so the layout is in the order of assembly I prefer, with effective use of the markup possibilities offered by HTML.</li>
+              <li>As a developer, I want to carefully design my scripts, so I can understand how to organize and write my code to achieve my goals in interactivity.</li>
+              <li>As a developer, I want to create a simple script for my index.html page using JavaScript, so that I can use the browser to send a response to the user.</li>
+              <li>As a developer, I want to receive and use the user's name, so that the program is personalized to their experience.</li>
+              <li>As a developer, I want to provide five questions to the user, so that they can guess the answers and get to know me.</li>
+              <li>As a developer, I want to notify the user after each question, so they are aware whether they were correct or not in their answers.</li>
+              <li>As a developer, I want to be able to debug my code by using well structured console messages.</li>
+              <li>As a developer, I want to manage my code through an online version control system, so I have the ability to work with others, manage my revisions, and keep a thorough record of my progress.</li>
             </ul>
-          <li>As a developer, I want to make useful web and mobile apps.
-          </li>
-          <li>I want to make enough money to move into a nicer apartment.
-          </li>
+        </article>
+
+        <article>
+          <h3>Story Entry #2</h3>
+          <ul>
+            <li>As a developer, I want to use thoughtful and descriptive console.log() throughout my code to help test my work and assist with debugging.</li>
+            <li>As a developer, I want to convert some of my appropriate biographical elements into unordered lists, such as my education summary and/or my work experience.</li>
+            <li>As a developer, I want to consider the user experience (UX) of my About Me and guessing game, trying to view it through the eyes of a user. Wait... maybe I should just write a user story for that...</li>
+            <li>As an end user of the About Me and guessing game, I want to have an informative, interesting, and fun experience in learning about the developer.</li>
+            <li>As a prospective job seeker, I want to consider adopting additional features that I have seen in the 'About Me' projects made by others, so that my 'About Me' can become more thorough and interesting than my original conception.</li>
+            <li>As a prospective job seeker, I want to make myself more personable by adding a Top Ten list to the bottom of my About Me page with an ordered list in HTML, for instance, my Top Ten Favorite Movies or my Top Ten Places I Want to Visit, or something along those lines.</li>
+            <li>As a prospective job seeker, I was to use CSS to creatively and tastefully style and layout my page.</li>
+            <li>As a prospective job seeker, I want to have five yes/no questions in my "about me" guessing game so that I have enough questions to cover a variety of things about me.</li>
+            <li>As a developer, I want to add a sixth question to my guessing game that takes numeric input by prompting a user to guess a number (for instance, "What is my favorite number?" or "How many Pokémon did I catch yesterday?"), and indicates to the user whether the guess is 'too high' or 'too low', and gives the user exactly four opportunities to get the correct answer, so that my fancy programming skills are showcased.</li>
+            <li>As a developer, I want to add a seventh question to my guessing game that has multiple possible correct answers that are stored in an array. For instance, "Can you guess a state that I have lived in besides Washington?", so that even more of my programming skills are showcased. For now, I will structure this question so that the user has six tries to get a single correct answer, and upon using up those tries OR getting a correct answer, displays a message to the user indicating all of the possible correct answers.</li>
+            <li>As a developer, I want to keep a tally of the total number of correct answers given by the user, and at the end of the game, tell the user how well they did with a personalized custom message that includes the number of correct answers and also addresses the user by name, e.g. "You got 4 out of 7 questions correct, Bobbi! Better luck next time."</li>
+            <h4>User Stories (Stretch goals... not required!)</h4>
+            <li>As a developer, I want to make my code more DRY by putting all of the questions, answers, and responses to the first five yes/no questions in my guessing game into arrays (or even one huge multidimensional array), and modifying the game logic such that a 'for' loop will control the flow from question to question.</li>
+            <li>Make the number-guessing question use a random number as its correct answer.</li>
+          </ul>
+        </article>
+      </section>
+
+      <section>
+        <h2>Biography</h2>
+        <article>
+          <h3>Work History</h3>
+          <ul>
+            <li>Cloud Support Engineer</li>
+              <ul>
+                <li>Microsoft</li>
+                <li>Redmond, WA</li>
+                <li>Apr 2017 - Sep 2017</li>
+              </ul>
+            <li>Command and Control System and Network Administrator</li>
+              <ul>
+                <li>United States Air Force</li>
+                <li>Osan Air Base, Republic of Korea</li>
+                <li>Sep 2012 - Aug 2016</li>
+              </ul>
+            <li>Intel System and Network Administrator</li>
+              <ul>
+                <li>United States Air Force</li>
+                <li>Ramstein Air Base, Germany</li>
+                <li>Aug 2010 - Aug 2016</li>
+              </ul>
+          </ul>
+        </article>
+        <article>
+          <h3>Education History</h3>
+          <ul>
+            <li>Code Fellows Fullstack Web Development - Seattle, WA</li>
+            <li>Airman Leadership School - Osan Air Base, Korea</li>
+            <li>B.S. Computer Information Systems - University of Scranton, PA</li>
+          </ul>
+        </article>
+      </section>
+
+      <section>
+        <h2>Random Facts</h2>
+        <article>
+          <h3>Top 10 Favorite Pokemon</h3>
+          <ol>
+            <li>Charizard</li>
+            <li>Scizor</li>
+            <li>Heracross</li>
+            <li>Politoad</li>
+            <li>Pikachu</li>
+            <li>Marowak</li>
+            <li>Kabutops</li>
+            <li>Greninja</li>
+            <li>Aegislash</li>
+            <li>Decidueye</li>
+          </ol>
+        </article>
+      </section>
+    </div><!-- end wrapper -->
+
+    <aside>
+      <section>
+        <ul>
+          <li>Technical Requirements</li>
+          <li>User Story</li>
+          <li>Biography</li>
+          <li>Random Facts</li>
         </ul>
-      </p>
-    </div><!-- end section2 -->
+      </section>
+    </aside>
+<!--
     <script type="text/javascript" src="app.js"></script>
+-->
   </body>
   <footer>
     <p>&copy; 2017 Ariel Pedraza</p>
