modified CSS, messing with padding and margins

--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
           </ol>
         </article>
       </section>
-    </div><!-- end wrapper -->
+  </div><!-- end wrapper -->
 
     <aside>
-      <section>
+      <section id="aside-section-1">
         <ul>
           <li>Technical Requirements</li>
           <li>User Story</li>
@@ -146,9 +146,13 @@
           <li>Random Facts</li>
         </ul>
       </section>
+
+      <section id="aside-section-2">
+        <p>Test paragraph</p>
+      </section>
     </aside>
-    
-    <script type="text/javascript" src="app.js"></script>
+
+    <!-- <script type="text/javascript" src="app.js"></script> -->
 
   </body>
   <footer>
