uncommented out script tag

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </section>
     </aside>
 
-    <!-- <script type="text/javascript" src="app.js"></script> -->
+    <script type="text/javascript" src="app.js"></script>
 
   </body>
   <footer>
