remade file structure, split content in index.html to an about.html page, modified html layout by getting rid of section tag, tweaked css by adding bow shadows

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 
   <body>
     <header>
-      <h1>About Ariel</h1>
+      <h1>Main Page</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Main</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <div id="content">
-      <section>
+    <div class="content">
+
         <article>
           <h2>Technical Requirements for "About Me"</h2>
           <p>A new GitHub repo called about_me will be initialized for this assignment (with a README and a license, of course)</p>
@@ -29,6 +35,7 @@
             <li>Add, Commit, Push process is being followed; it is evident in GitHub that commits are made regularly, and with good commit messages that explain the WHY of the commit.</li>
           </ul>
         </article>
+
         <article>
         <h2>Technical Requirements Additions</h2>
           <ul>
@@ -39,9 +46,7 @@
             <li>Expect that you will probably need both 'for' and 'while' structures for your sixth and seventh questions. But not necessarily. Maybe. Possibly.</li>
           </ul>
         </article>
-      </section>
 
-      <section>
         <h2>My User Story</h2>
         <article>
           <h3>Story Entry #1</h3>
@@ -80,61 +85,7 @@
             <li>Make the number-guessing question use a random number as its correct answer.</li>
           </ul>
         </article>
-      </section>
 
-      <section>
-        <h2>Biography</h2>
-        <article>
-          <h3>Work History</h3>
-          <ul>
-            <li>Cloud Support Engineer</li>
-              <ul>
-                <li>Microsoft</li>
-                <li>Redmond, WA</li>
-                <li>Apr 2017 - Sep 2017</li>
-              </ul>
-            <li>Command and Control System and Network Administrator</li>
-              <ul>
-                <li>United States Air Force</li>
-                <li>Osan Air Base, Republic of Korea</li>
-                <li>Sep 2012 - Aug 2016</li>
-              </ul>
-            <li>Intel System and Network Administrator</li>
-              <ul>
-                <li>United States Air Force</li>
-                <li>Ramstein Air Base, Germany</li>
-                <li>Aug 2010 - Aug 2016</li>
-              </ul>
-          </ul>
-        </article>
-        <article>
-          <h3>Education History</h3>
-          <ul>
-            <li>Code Fellows Fullstack Web Development - Seattle, WA</li>
-            <li>Airman Leadership School - Osan Air Base, Korea</li>
-            <li>B.S. Computer Information Systems - University of Scranton, PA</li>
-          </ul>
-        </article>
-      </section>
-
-      <section>
-        <h2>Random Facts</h2>
-        <article>
-          <h3>Top 10 Favorite Pokemon</h3>
-          <ol>
-            <li>Charizard</li>
-            <li>Scizor</li>
-            <li>Heracross</li>
-            <li>Politoad</li>
-            <li>Pikachu</li>
-            <li>Marowak</li>
-            <li>Kabutops</li>
-            <li>Greninja</li>
-            <li>Aegislash</li>
-            <li>Decidueye</li>
-          </ol>
-        </article>
-      </section>
   </div><!-- end wrapper -->
 
     <aside>
@@ -152,7 +103,7 @@
       </section>
     </aside>
 
-    <script type="text/javascript" src="app.js"></script>
+    <!-- <script type="text/javascript" src="app.js"></script> -->
 
   </body>
   <footer>
